--- a/src/components/main.css
+++ b/src/components/main.css
@@ -1,8 +1,8 @@
 html {
   width: 100%;
   height: 100vh;
-  /*display: flex;*/
-  /*justify-content: center;*/
-  /*align-items: center;*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 0;
 }
