--- a/src/components/Gate/Gate.css
+++ b/src/components/Gate/Gate.css
@@ -1,25 +1,24 @@
-.gate-animation-enter .gate-text {
+/* styles.css */
+.text-enter {
+  fill: white;
+}
+.text-enter-active {
+  fill: white;
+  transition: fill 0.5s ease-in;
+}
+
+.text-enter-done {
+  fill: white;
+}
+
+.text-exit {
+  fill: white;
+}
+.text-exit-active {
   fill: black;
+  transition: fill 0.5s ease-out;
 }
 
-.gate-animation-enter-active .gate-text {
-  fill: white;
-  transition: fill 0.5s ease-in-out;
-}
-
-.gate-animation-enter-done .gate-text {
-  fill: white;
-}
-
-.gate-animation-exit .gate-text {
-  fill: white;
-}
-
-.gate-animation-exit-active .gate-text {
-  fill: black;
-  transition: fill 0.5s ease-in-out;
-}
-
-.gate-animation-exit-done .gate-text {
+.text-exit-done {
   fill: black;
 }
